--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/discord-rpc"]
 	path = external/discord-rpc
 	url = https://github.com/maybekoi/discord-rpc
+[submodule "src/engine"]
+	path = src/engine
+	url = https://github.com/hamburgerEngine/hamburgerEngine-lib.git
