--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "src/gameName"]
 	path = src/gameName
 	url = https://github.com/hamburgerEngine/hamburgerEngine-template.git
+[submodule "assets"]
+	path = assets
+	url = https://github.com/hamburgerEngine/hamburgerEngine-assets.git
